--- a/public/contact.html
+++ b/public/contact.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Contact Me</h1>
-    <p>Tel: +62 813-3669-7616</p>
+    <p>Tel: +62 813-36xx-xxxx</p>
     <p>Email: diast.sf@gmail.com</p>
     <p>Address:</p>
     <p style="margin-left: 20px">
